# leaf-nest

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .npmrc  .prettierrc.json  Dockerfile  README.md  README.zh-CN.md  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  index.html  next.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.server.json  vercel.json  vite.config.ts  vitest.server.config.ts
.github/workflows/: docker-publish.yml  react-doctor.yml
backend/: go.mod  go.sum  main.go
backend/entity/: book.go  models.go  user.go
backend/test/: db_test.go  entity_test.go  env_test.go
backend/util/: generage_entity.go
docs/: 2026-03-27-leaf-nest-cloud-architecture-plan.md  2026-03-27-leaf-nest-cloud-implementation-plan.md
drizzle/: 0000_curious_skrulls.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
server/src/: app.test.ts  app.ts  deployment.test.ts  env.test.ts  env.ts  index.ts  load-env.test.ts
src/: App.tsx  main.tsx  navigation.ts  vite-plus-migration.test.ts  vite-regression.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.library.test.tsx  page.test.tsx  page.tsx  providers.tsx
src/components/: AppImage.tsx  AuthAsciiBackground.tsx  AuthCard.tsx  AuthGate.test.tsx  AuthGate.tsx  BookInfoModal.tsx  ClientLayout.test.tsx  ClientLayout.tsx  HighlightShareModal.test.tsx  HighlightShareModal.tsx  LocaleSwitcher.tsx  (+3 more)
web/: package-lock.json  package.json
(+105 files in other folders)
