[package]
name = "leaf-nest"
version = "0.1.0"
description = "Leaf Nest Android and desktop client"
authors = ["Jhao <jhao413@qq.com>"]
edition = "2021"
license = "MIT"

[lib]
name = "leaf_nest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
